# Demo

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: debug.txt
app/src/main/cpp/: demo.h  native-lib.cpp
app/src/main/java/com/demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
